Added selenium to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
-streamlit
-PyMuPDF
+selenium
+webdriver-manager
+requests
+flask
 pandas
+beautifulsoup4
+sqlalchemy
 openai
-dotenv
-sentence-transformers
-openpyxl
-watchdog
-torch
-pdfplumber
-chardet
-scikit-learn
-pyvis
+chromadb
